# xot

./: CHANGES.md  Cargo.toml  LICENSE.txt  README.md  release.toml
examples/: accessing_xml_data.md  accessing_xml_data.rs
proptest-regressions/: proptest.txt
src/: _tutorial.rs  access.rs  alt.rs  creation.rs  document.rs  encoding.rs  entity.rs  error.rs  fixed.rs  fullname.rs  idmap.rs  levelorder.rs  lib.rs  magic.rs  manipulation.rs  name.rs  nameaccess.rs  namespace.rs  nodemap.rs  parse.rs  prefix.rs  pretty.rs  pretty2.rs  proptest.rs  qname.rs  serialize.rs  serializer.rs  serializer2.rs  serializer3.rs  unpretty.rs  valueaccess.rs  xmldata.rs  xmlnode.rs  xmlvalue.rs  xotdata.rs
src/id/: idmap.rs  mod.rs  name.rs  namespace.rs  prefix.rs
src/nodemap/: attribute.rs  core.rs  entry.rs  mod.rs  namespace.rs
src/output/: common.rs  fullname.rs  html5.rs  html5_serializer.rs  html5elements.rs  icu_normalization.rs  mod.rs  normalizer.rs  pretty.rs  serializer.rs  xml.rs  xml_serializer.rs
src/snapshots/: xot__pretty2__tests__<doc><a><!--hello--><!--world--><__a><__doc>.snap  xot__pretty2__tests__<doc><a><?pi?><?pi?><__a><__doc>.snap  xot__pretty2__tests__<doc><a><b__><__a><__doc>.snap  xot__pretty2__tests__<doc><a><b__><__a><a><b__><b__><__a><__doc>.snap  xot__pretty2__tests__<doc><a>text<__a><a>text 2<__a><__doc>.snap  xot__pretty2__tests__<doc><p>Hello <!--world-->!<__p><__doc>.snap  xot__pretty2__tests__<doc><p>Hello <em><strong>world<__strong><__em>!<__p><__doc>.snap  xot__pretty2__tests__<doc><p>Hello <em>world<__em>!<__p><__doc>.snap  xot__pretty2__tests__<doc><p>Hello <em>world<__em>!<__p><p>Greetings, <strong>universe<__strong>!<__p><__doc>.snap  xot__pretty__tests__<doc><a><!--hello--><!--world--><__a><__doc>.snap  xot__pretty__tests__<doc><a><?pi?><?pi?><__a><__doc>.snap  xot__pretty__tests__<doc><a><b__><__a><__doc>.snap  xot__pretty__tests__<doc><a><b__><__a><a><b__><b__><__a><__doc>.snap  xot__pretty__tests__<doc><a>text<__a><a>text 2<__a><__doc>.snap  xot__pretty__tests__<doc><p>Hello <!--world-->!<__p><__doc>.snap  xot__pretty__tests__<doc><p>Hello <em><strong>world<__strong><__em>!<__p><__doc>.snap  xot__pretty__tests__comment.snap  xot__pretty__tests__mixed.snap  (+22 more)
tests/: roundtrip.rs  test_access.rs  test_attribute_order.rs  test_compare.rs  test_error.rs  test_escape.rs  test_id.rs  test_manip.rs  test_name.rs  test_nameaccess.rs  test_parse_error.rs  test_parser.rs  test_proptest.rs  test_rw.rs  test_serialize.rs  test_style.rs  test_traverse.rs  test_xmlname.rs
(+22 files in other folders)
