[package]
name = "xot"
version = "0.9.0"
edition = "2021"
license = "MIT"
description = "XML tree library for Rust"
authors = ["Martijn Faassen <faassen@startifact.com>"]
homepage = "https://github.com/faassen/xot"
documentation = "https://docs.rs/xot"
repository = "https://github.com/faassen/xot"
readme = "README.md"
keywords = ["xml", "tree", "dom"]

[features]
proptest = ["dep:proptest"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
ahash = "0.8.2"
indextree = "4.5.0"
vector-map = "1.0.1"
xmlparser = "0.13.5"
proptest = { version = "1.0.0", optional = true }

[dev-dependencies]
insta = { version = "1.21.2" }
rstest = "0.16.0"
proptest = "1.0.0"
