[package]
name = "xot"
version = "0.22.0"
edition = "2021"
license = "MIT"
description = "Full-featured XML tree library for Rust"
authors = ["Martijn Faassen <faassen@startifact.com>"]
homepage = "https://github.com/faassen/xot"
documentation = "https://docs.rs/xot"
repository = "https://github.com/faassen/xot"
readme = "README.md"
keywords = ["xml", "tree", "dom"]

[features]
proptest = ["dep:proptest"]
serde = ["dep:serde"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
ahash = "0.8.2"
indextree = "4.5.0"
xmlparser = "0.13.5"
proptest = { version = "1.0.0", optional = true }
encoding_rs = "0.8.33"
xhtmlchardet = "2.2.0"
genawaiter = "0.99.1"
serde = { version = "~1", features = ["derive"], optional = true }

[dev-dependencies]
insta = { version = "1.21.2" }
rstest = "0.16.0"
proptest = "1.0.0"
